# bacen-data-analysis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
Analysis/: Banks.csv  DataAnalysis.ipynb  DataAnalysis2.ipynb  DataAnalysis_example.ipynb  DataAnalysis_example_2.ipynb  referencia_nomes_consulta.xlsx
Code/: DataAnalysis.ipynb  DataCheck.ipynb  DataDownload.ipynb  DataUtils.py
docs/: troubleshooting.md
docs/arquitetura/: design-patterns.md  estrutura-projeto.md  novos-recursos-v2.md
docs/guias/: instalacao.md  migracao-v2.md  uso-rapido.md
docs/referencia/: api-completa.md  exemplos-praticos.md  tecnicas-avancadas.md
notebooks/analysis/: example.ipynb  full_table.ipynb
notebooks/etl/: data_download.ipynb
src/bacen_analysis/: __init__.py  exceptions.py
src/bacen_analysis/analysis/: __init__.py  comparator.py  time_series.py
src/bacen_analysis/core/: __init__.py  analyser.py  entity_resolver.py
src/bacen_analysis/data/: __init__.py  loader.py  repository.py
src/bacen_analysis/providers/: cadastro.py  cosif.py  ifdata.py
src/bacen_analysis/utils/: __init__.py  logger.py  text.py
